[package]
name = "find-the-relation"
version = "0.1.0"
authors = ["Søren Fuglede Jørgensen <>"]
edition = "2018"

[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
num = "0.3.1"
js-sys = "0.3.51"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"
